# magic-soup

./: .gitignore  .readthedocs.yaml  Cargo.toml  DEV_README.md  README.md  _tryout.py  asd.json  cells.py  check.ipynb  environment.yml  environment_cuda11.6.yml  genetics.py  main.py  mkdocs.yml  mypy.ini  perf.py  protein_activity.ipynb  pyproject.toml  util.py  vscode.env  world.py
.github/workflows/: CI.yml
docs/: create_cell_growth_gif.py  create_cover_gif.py  create_figures.py  figures.md  index.md  mechanics.md  other_simulations.md  reference.md  requirements.txt  run.py  supporting_figures.md  tutorials.md
docs/plots/: biochemical_patterns.py  equilibrium_constants.py  free_energy.py  genomes.py  kinetic_constants.py  molecule_maps.py  mutations.py  reaction_kinetics.py  survival_replication.py  transcriptomes.py  util.py
example/: __main__.py  analysis.ipynb  create_cell_growth_gif.py  create_cover_gif.py  run.py
experiments/e0_performance/: README.md  main.py
experiments/e1_co2_fixing/: README.md  analyze.ipynb  analyze_2023-01-17_21-45.ipynb  main.py
magicsoup/: __init__.py  constants.py  containers.py  genetics.py  kinetics.py  mechanistics.py  mutations.py  proteins.py  util.py  world.py
magicsoup/examples/: default.py  n2_fixing.py  reverse_krebs.py  wood_ljungdahl.py
performance/: README.md  check.py  main.py  run.py  run_simulation.py
python/: requirements.txt
python/magicsoup/: __init__.py  constants.py  containers.py  factories.py  genetics.py  kinetics.py  mutations.py  util.py  world.py
python/magicsoup.egg-info/: PKG-INFO  SOURCES.txt
python/magicsoup/examples/: wood_ljungdahl.py
rust/: constants.rs  genetics.rs  kinetics.rs  lib.rs  mutations.rs  util.rs  world.rs
scripts/: build-and-release.sh  build-release.sh  check-performance.sh  release.sh  serve-docs.sh  test.sh  version-docs.sh  version.sh
src/: requirements.txt
src/magicsoup/: __init__.py  constants.py  containers.py  functions.py  genetics.py  genetics_functions.py  kinetics.py  kinetics2.py  mutations.py  mutations_functions.py  util.py  world.py
src/magicsoup.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/magicsoup/examples/: co2_fixing.py  wood_ljungdahl.py
tests/: README.md  atest_kinetics_old.py  check.ipynb  conftest.py  requirements.txt  test_cells.py  test_containers.py  test_genetics.py  test_kinetics.py  test_kinetics2.py  test_kinetics_integration.py  test_mechanistics.py  test_mutations.py  test_util.py  test_world.py  test_world_integration.py
tests/fast/: test_containers.py  test_factories.py  test_genetics.py  test_kinetics.py  test_mutations.py  test_util.py  test_world.py
tests/slow/: test_factories.py  test_genetics.py  test_kinetics.py  test_mutations.py  test_world.py
viz/: create_cell_growth_gif.py  create_cover_gif.py  create_figures.py  run.py
