[package]
name = "magicsoup"  # pyproject.toml has precedence
version = "0.14.0"  # pyproject.toml has precedence

[lib]
name = "_lib"  # private module to be nested into Python package
crate-type = ["cdylib"]
path = "rust/lib.rs"

[dependencies]
rand_distr = { version = "*" }
rayon = { version = "*" }
rand = { version = "*" }
pyo3 = { version = "0.20.0", features = ["extension-module"] }